--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.3",
-    "http": "0.0.0",
+    "request": "*",
     "twit": "^2.2.9"
   }
 }
